# shamebot

./: .gitignore  LICENSE  README.md  docker-compose.yml
api/: Cargo.toml
api/docker/: Dockerfile
api/src/: environment.rs  main.rs  routes.rs
cron/: Cargo.toml
cron/docker/: Dockerfile
cron/src/: cronjob.rs  main.rs  routes.rs  server.rs
database/: Cargo.toml
database/docker/: Dockerfile
database/src/: client.rs  environment.rs  lib.rs  prelude.rs
database/src/sql/: init.sql
discord/: Cargo.toml
discord/src/: bot.rs  environment.rs  lib.rs
frontend/: package-lock.json  package.json
frontend/src/api/: client.ts  types.ts
utils/: Cargo.toml
utils/src/: lib.rs
