[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { version = "0.1.0", path = "../database" }
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
utils = { version = "0.1.0", path = "../utils" }
