[package]
name = "cron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
database = { version = "0.1.0", path = "../database" }
discord = { version = "0.1.0", path = "../discord" }
log = "0.4.17"
tokio = { version = "1.25.0", features = ["rt", "macros"] }
tokio-cron-scheduler = { version = "0.9.4", features = ["postgres_storage"] }
utils = { version = "0.1.0", path = "../utils" }
uuid = { version = "1.3.0", features = ["v4"] }
