[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.17"
mobc = "0.8.1"
mobc-postgres = { version = "0.8.0", features = ["with-chrono-0_4"] }
thiserror = "1.0.38"
uuid = { version = "1.3.0", features = ["v4"] }
