[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
futures = "0.3.26"
log = "0.4.17"
mobc = "0.8.1"
mobc-postgres = "0.8.0"
postgres-types = { version = "0.2.4", features = ["derive"] }
thiserror = "1.0.38"
tokio = "1.25.0"
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1"] }
uuid = { version = "1.3.0", features = ["v4"] }
