[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { version = "0.1.0", path = "../database" }
log = "0.4.17"
serenity = { version = "0.11.5", default-features = false, features = ["client", "builder", "http", "gateway", "model", "rustls_backend", "utils"] }
utils = { version = "0.1.0", path = "../utils" }
uuid = { version = "1.3.0", features = ["v4"] }
